DataDog trace export processing

--- a/app-analyzers/collect-nginx-statuses.ipynb
+++ b/app-analyzers/collect-nginx-statuses.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -73,10 +73,9 @@
       "Found 1 tasks running in acl-playground/us-west-2\n",
       "Found 4 tasks running in acl-staging/us-west-2\n",
       "Found 3 tasks running in acl-staging/us-east-1\n",
-      "Found 20 tasks running in acl-production/us-east-1\n",
-      "Found 29 tasks running in acl-production/eu-central-1\n",
+      "Found 38 tasks running in acl-production/us-east-1\n",
+      "Found 32 tasks running in acl-production/eu-central-1\n",
       "Found 4 tasks running in acl-production/af-south-1\n",
-      "Task arn:aws:ecs:af-south-1:707785685172:task/EcsCluster1-main/3377bd6db96d4e3ba323ed4fb58edfce failed: Channel closed before command output was received\n",
       "Found 4 tasks running in acl-production/ca-central-1\n",
       "Found 4 tasks running in acl-production/ap-northeast-1\n",
       "Found 6 tasks running in acl-production/ap-southeast-1\n",
@@ -85,17 +84,17 @@
       "+----------------+----------------+-------+--------+---------+---------+----------+---------+---------+---------+-----------+\n",
       "|    Profile     |     Region     | tasks | active | handled | accepts | requests | reading | writing | waiting | queue_avg |\n",
       "+----------------+----------------+-------+--------+---------+---------+----------+---------+---------+---------+-----------+\n",
-      "| acl-production |  eu-central-1  |   29  |   65   | 1380616 | 1380616 | 1701905  |    0    |    34   |    31   |    0.2    |\n",
-      "|  acl-staging   |   us-east-1    |   3   |   7    |  70972  |  70972  |  250078  |    0    |    3    |    4    |    0.3    |\n",
-      "| acl-production | ap-southeast-1 |   6   |   47   |  58753  |  58753  |  122235  |    0    |    6    |    41   |    5.8    |\n",
-      "| acl-production |   us-east-1    |   20  |   74   |  37400  |  37400  |  57438   |    0    |    22   |    52   |    1.7    |\n",
-      "|  acl-staging   |   us-west-2    |   4   |   20   |   5573  |   5573  |  47098   |    0    |    4    |    16   |    3.0    |\n",
-      "| acl-production | ap-southeast-2 |   6   |   8    |  43019  |  43019  |  45853   |    0    |    6    |    2    |     0     |\n",
-      "| acl-production | ap-northeast-1 |   4   |   5    |  31184  |  31184  |  33923   |    0    |    4    |    1    |     0     |\n",
-      "| acl-production |   af-south-1   |   4   |   8    |  20069  |  20069  |  25972   |    0    |    3    |    5    |     0     |\n",
-      "| acl-playground |   us-west-2    |   1   |   1    |   4752  |   4752  |   6895   |    0    |    1    |    0    |     0     |\n",
-      "| acl-production |   sa-east-1    |   6   |   28   |   3963  |   3963  |   6310   |    0    |    7    |    21   |    2.7    |\n",
-      "| acl-production |  ca-central-1  |   4   |   7    |   1551  |   1551  |   1918   |    0    |    4    |    3    |     0     |\n",
+      "| acl-production |   us-east-1    |   38  |  194   | 1493457 | 1493457 | 2272495  |    0    |    50   |   144   |    3.1    |\n",
+      "| acl-production |  eu-central-1  |   32  |  183   | 1756870 | 1756870 | 2080612  |    0    |    38   |   145   |    3.7    |\n",
+      "| acl-production |   sa-east-1    |   6   |   30   |  388438 |  388438 |  663539  |    0    |    6    |    24   |    3.0    |\n",
+      "| acl-production | ap-southeast-2 |   6   |   8    |  347456 |  347456 |  367955  |    0    |    6    |    2    |     0     |\n",
+      "| acl-production | ap-southeast-1 |   6   |   30   |  142385 |  142385 |  335148  |    0    |    7    |    23   |    3.0    |\n",
+      "| acl-production |   af-south-1   |   4   |   11   |  232409 |  232409 |  304685  |    0    |    4    |    7    |    0.8    |\n",
+      "| acl-production |  ca-central-1  |   4   |   11   |  136399 |  136399 |  209138  |    0    |    4    |    7    |    0.8    |\n",
+      "|  acl-staging   |   us-east-1    |   3   |   25   |  31672  |  31672  |  93608   |    0    |    7    |    18   |    6.3    |\n",
+      "| acl-production | ap-northeast-1 |   4   |   4    |  27159  |  27159  |  29704   |    0    |    4    |    0    |     0     |\n",
+      "|  acl-staging   |   us-west-2    |   4   |   15   |   1032  |   1032  |   1610   |    0    |    4    |    11   |    1.8    |\n",
+      "| acl-playground |   us-west-2    |   1   |   1    |   1295  |   1295  |   1351   |    0    |    1    |    0    |     0     |\n",
       "+----------------+----------------+-------+--------+---------+---------+----------+---------+---------+---------+-----------+\n"
      ]
     }
@@ -297,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -307,8 +306,8 @@
       "Found 1 tasks running in acl-playground/us-west-2\n",
       "Found 4 tasks running in acl-staging/us-west-2\n",
       "Found 3 tasks running in acl-staging/us-east-1\n",
-      "Found 20 tasks running in acl-production/us-east-1\n",
-      "Found 29 tasks running in acl-production/eu-central-1\n",
+      "Found 38 tasks running in acl-production/us-east-1\n",
+      "Found 32 tasks running in acl-production/eu-central-1\n",
       "Found 4 tasks running in acl-production/af-south-1\n",
       "Found 4 tasks running in acl-production/ca-central-1\n",
       "Found 4 tasks running in acl-production/ap-northeast-1\n",
