DataDog and NGINX statistics

--- a/app-analyzers/projects-params.ipynb
+++ b/app-analyzers/projects-params.ipynb
@@ -2,15 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "111295.80s - pydevd: Sending message related to process being replaced timed-out after 5 seconds\n",
       "Requirement already satisfied: pip in /Users/psaghelyi-remote/.pyenv/versions/3.11.3/lib/python3.11/site-packages (23.3.2)\n",
       "Note: you may need to restart the kernel to use updated packages.\n",
+      "111303.83s - pydevd: Sending message related to process being replaced timed-out after 5 seconds\n",
       "Requirement already satisfied: boto3 in /Users/psaghelyi-remote/.pyenv/versions/3.11.3/lib/python3.11/site-packages (1.33.1)\n",
       "Requirement already satisfied: prettytable in /Users/psaghelyi-remote/.pyenv/versions/3.11.3/lib/python3.11/site-packages (3.9.0)\n",
       "Requirement already satisfied: botocore<1.34.0,>=1.33.1 in /Users/psaghelyi-remote/.pyenv/versions/3.11.3/lib/python3.11/site-packages (from boto3) (1.33.1)\n",
@@ -31,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,6 +41,7 @@
     "import subprocess\n",
     "import json\n",
     "import os\n",
+    "import datetime\n",
     "import time\n",
     "from prettytable import PrettyTable"
    ]
@@ -52,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,39 +166,96 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_task_metrics(profile, region_name, cluster_name, service_name, delta_hours=12):\n",
+    "    aws_session = set_aws_credentials(profile, region_name=region_name)\n",
+    "    cloudwatch_client = aws_session.client('cloudwatch')\n",
+    "    \n",
+    "    # Get CPU utilization from CloudWatch\n",
+    "    cpu_utilization = cloudwatch_client.get_metric_statistics(\n",
+    "        Namespace='AWS/ECS',\n",
+    "        MetricName='CPUUtilization',\n",
+    "        Dimensions=[\n",
+    "            {'Name': 'ClusterName', 'Value': cluster_name},\n",
+    "            {'Name': 'ServiceName', 'Value': service_name}\n",
+    "        ],\n",
+    "        StartTime=datetime.datetime.utcnow() - datetime.timedelta(hours=delta_hours),\n",
+    "        EndTime=datetime.datetime.utcnow(),\n",
+    "        Period=300, # 60, 300, 3600\n",
+    "        Statistics=['Average'],\n",
+    "    )\n",
+    "\n",
+    "    mem_utilization = cloudwatch_client.get_metric_statistics(\n",
+    "        Namespace='AWS/ECS',\n",
+    "        MetricName='MemoryUtilization',\n",
+    "        Dimensions=[\n",
+    "            {'Name': 'ClusterName', 'Value': cluster_name},\n",
+    "            {'Name': 'ServiceName', 'Value': service_name}\n",
+    "        ],\n",
+    "        StartTime=datetime.datetime.utcnow() - datetime.timedelta(hours=12),\n",
+    "        EndTime=datetime.datetime.utcnow(),\n",
+    "        Period=300, # 60, 300, 3600\n",
+    "        Statistics=['Average'],\n",
+    "    )\n",
+    "    \n",
+    "    \n",
+    "    # parse the response to get average, min, max\n",
+    "    cpu_utilization = cpu_utilization['Datapoints']\n",
+    "    cpu_utilization = [point['Average'] for point in cpu_utilization]\n",
+    "    cpu_avg = sum(cpu_utilization) / len(cpu_utilization)\n",
+    "    cpu_min = min(cpu_utilization)\n",
+    "    cpu_max = max(cpu_utilization)\n",
+    "\n",
+    "    mem_utilization = mem_utilization['Datapoints']\n",
+    "    mem_utilization = [point['Average'] for point in mem_utilization]\n",
+    "    mem_avg = sum(mem_utilization) / len(mem_utilization)\n",
+    "    mem_min = min(mem_utilization)\n",
+    "    mem_max = max(mem_utilization)\n",
+    "\n",
+    "    return cpu_avg, cpu_min, cpu_max, mem_avg, mem_min, mem_max\n",
+    "    #print(\"CPU Utilization:\", round(cpu_avg, 2), \"%\", \"(min:\", round(cpu_min, 2), \"%, max:\", round(cpu_max, 2), \"%)\")\n",
+    "\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "acl-playground us-west-2 - Min Tasks: 1, Max Tasks: 4, Actual Tasks: 1 (25.0%), Algorithm: LOR\n",
-      "acl-staging us-west-2 - Min Tasks: 1, Max Tasks: 4, Actual Tasks: 1 (25.0%), Algorithm: LOR\n",
-      "acl-staging us-east-1 - Min Tasks: 3, Max Tasks: 3, Actual Tasks: 3 (N/A%), Algorithm: LOR\n",
-      "acl-production us-east-1 - Min Tasks: 6, Max Tasks: 48, Actual Tasks: 21 (43.75%), Algorithm: LOR\n",
-      "acl-production eu-central-1 - Min Tasks: 12, Max Tasks: 50, Actual Tasks: 31 (62.0%), Algorithm: LOR\n",
-      "acl-production af-south-1 - Min Tasks: 4, Max Tasks: 32, Actual Tasks: 4 (12.5%), Algorithm: LOR\n",
-      "acl-production ca-central-1 - Min Tasks: 4, Max Tasks: 32, Actual Tasks: 4 (12.5%), Algorithm: LOR\n",
-      "acl-production ap-northeast-1 - Min Tasks: 4, Max Tasks: 32, Actual Tasks: 4 (12.5%), Algorithm: LOR\n",
-      "acl-production ap-southeast-1 - Min Tasks: 6, Max Tasks: 48, Actual Tasks: 6 (12.5%), Algorithm: LOR\n",
-      "acl-production ap-southeast-2 - Min Tasks: 6, Max Tasks: 48, Actual Tasks: 6 (12.5%), Algorithm: LOR\n",
-      "acl-production sa-east-1 - Min Tasks: 6, Max Tasks: 48, Actual Tasks: 6 (12.5%), Algorithm: LOR\n",
-      "+----------------+----------------+-----+-----+--------+-------+-----------+\n",
-      "|    Profile     |     Region     | Min | Max | Actual |   %   | Algorithm |\n",
-      "+----------------+----------------+-----+-----+--------+-------+-----------+\n",
-      "| acl-playground |   us-west-2    |  1  |  4  |   1    |  25.0 |    LOR    |\n",
-      "|  acl-staging   |   us-west-2    |  1  |  4  |   1    |  25.0 |    LOR    |\n",
-      "|  acl-staging   |   us-east-1    |  3  |  3  |   3    |  N/A  |    LOR    |\n",
-      "| acl-production |   us-east-1    |  6  |  48 |   21   | 43.75 |    LOR    |\n",
-      "| acl-production |  eu-central-1  |  12 |  50 |   31   |  62.0 |    LOR    |\n",
-      "| acl-production |   af-south-1   |  4  |  32 |   4    |  12.5 |    LOR    |\n",
-      "| acl-production |  ca-central-1  |  4  |  32 |   4    |  12.5 |    LOR    |\n",
-      "| acl-production | ap-northeast-1 |  4  |  32 |   4    |  12.5 |    LOR    |\n",
-      "| acl-production | ap-southeast-1 |  6  |  48 |   6    |  12.5 |    LOR    |\n",
-      "| acl-production | ap-southeast-2 |  6  |  48 |   6    |  12.5 |    LOR    |\n",
-      "| acl-production |   sa-east-1    |  6  |  48 |   6    |  12.5 |    LOR    |\n",
-      "+----------------+----------------+-----+-----+--------+-------+-----------+\n"
+      "acl-playground us-west-2 - Actual Tasks: 1 (25.0%) CPU: 10.36%  Memory: 50.33%\n",
+      "acl-staging us-west-2 - Actual Tasks: 1 (25.0%) CPU: 16.25%  Memory: 65.84%\n",
+      "acl-staging us-east-1 - Actual Tasks: 3 (N/A%) CPU: 5.93%  Memory: 63.53%\n",
+      "acl-production us-east-1 - Actual Tasks: 33 (68.75%) CPU: 15.06%  Memory: 37.89%\n",
+      "acl-production eu-central-1 - Actual Tasks: 26 (52.0%) CPU: 10.91%  Memory: 45.18%\n",
+      "acl-production af-south-1 - Actual Tasks: 4 (12.5%) CPU: 11.04%  Memory: 65.53%\n",
+      "acl-production ca-central-1 - Actual Tasks: 4 (12.5%) CPU: 13.31%  Memory: 60.64%\n",
+      "acl-production ap-northeast-1 - Actual Tasks: 4 (12.5%) CPU: 12.3%  Memory: 53.0%\n",
+      "acl-production ap-southeast-1 - Actual Tasks: 6 (12.5%) CPU: 22.39%  Memory: 71.34%\n",
+      "acl-production ap-southeast-2 - Actual Tasks: 6 (12.5%) CPU: 2.63%  Memory: 31.41%\n",
+      "acl-production sa-east-1 - Actual Tasks: 6 (12.5%) CPU: 10.16%  Memory: 56.42%\n",
+      "+----------------+----------------+-----+-----+-----+-------+-----------+---------+---------+---------+---------+---------+---------+\n",
+      "|    Profile     |     Region     | Min | Max | Act |   %   | Algorithm | CPU Avg | CPU Min | CPU Max | Mem Avg | Mem Min | Mem Max |\n",
+      "+----------------+----------------+-----+-----+-----+-------+-----------+---------+---------+---------+---------+---------+---------+\n",
+      "| acl-playground |   us-west-2    |  1  |  4  |  1  |  25.0 |    LOR    |  10.36  |   4.77  |  21.75  |  50.33  |   29.3  |  62.38  |\n",
+      "|  acl-staging   |   us-west-2    |  1  |  4  |  1  |  25.0 |    LOR    |  16.25  |   5.61  |  62.95  |  65.84  |  39.36  |  74.69  |\n",
+      "|  acl-staging   |   us-east-1    |  3  |  3  |  3  |  N/A  |    LOR    |   5.93  |   2.34  |  48.03  |  63.53  |  33.21  |  69.57  |\n",
+      "| acl-production |   us-east-1    |  6  |  48 |  33 | 68.75 |    LOR    |  15.06  |   8.21  |   23.1  |  37.89  |  24.89  |  43.67  |\n",
+      "| acl-production |  eu-central-1  |  12 |  50 |  26 |  52.0 |    LOR    |  10.91  |   6.09  |   19.0  |  45.18  |  38.96  |  51.04  |\n",
+      "| acl-production |   af-south-1   |  4  |  32 |  4  |  12.5 |    LOR    |  11.04  |   5.4   |  19.86  |  65.53  |  53.99  |  69.38  |\n",
+      "| acl-production |  ca-central-1  |  4  |  32 |  4  |  12.5 |    LOR    |  13.31  |   6.41  |  53.04  |  60.64  |  39.14  |  67.96  |\n",
+      "| acl-production | ap-northeast-1 |  4  |  32 |  4  |  12.5 |    LOR    |   12.3  |   4.61  |  53.65  |   53.0  |  40.78  |  63.53  |\n",
+      "| acl-production | ap-southeast-1 |  6  |  48 |  6  |  12.5 |    LOR    |  22.39  |   8.28  |  54.23  |  71.34  |  60.86  |  78.14  |\n",
+      "| acl-production | ap-southeast-2 |  6  |  48 |  6  |  12.5 |    LOR    |   2.63  |   2.27  |   4.22  |  31.41  |  29.89  |  32.56  |\n",
+      "| acl-production |   sa-east-1    |  6  |  48 |  6  |  12.5 |    LOR    |  10.16  |   6.95  |  39.14  |  56.42  |  36.82  |   86.0  |\n",
+      "+----------------+----------------+-----+-----+-----+-------+-----------+---------+---------+---------+---------+---------+---------+\n"
      ]
     }
    ],
@@ -219,14 +279,18 @@
     "]\n",
     "\n",
     "table = PrettyTable()\n",
-    "table.field_names = [\"Profile\", \"Region\", \"Min\", \"Max\", \"Actual\", \"%\", \"Algorithm\"]\n",
+    "table.field_names = [\"Profile\", \"Region\", \"Min\", \"Max\", \"Act\", \"%\", \"Algorithm\", \"CPU Avg\", \"CPU Min\", \"CPU Max\", \"Mem Avg\", \"Mem Min\", \"Mem Max\"]\n",
     "\n",
     "for profile, region in environments:\n",
     "    min_tasks, max_tasks, desired_tasks = getScalingDetails(profile, region, cluster_name, service_name)\n",
     "    algorithm = getLoadBalancingAlgorithm(profile, region, cluster_name, service_name)\n",
     "    percentage = str(round(desired_tasks/max_tasks*100.,2)) if max_tasks > min_tasks else \"N/A\"\n",
-    "    print(f\"{profile} {region} - Min Tasks: {min_tasks}, Max Tasks: {max_tasks}, Actual Tasks: {desired_tasks} ({percentage}%), Algorithm: {algorithm}\")\n",
-    "    table.add_row([profile, region, min_tasks, max_tasks, desired_tasks, percentage, algorithm])\n",
+    "    cpu_avg, cpu_min, cpu_max, mem_avg, mem_min, mem_max = get_task_metrics(profile, region, cluster_name, service_name)\n",
+    "\n",
+    "    print(f\"{profile} {region} - Actual Tasks: {desired_tasks} ({percentage}%) CPU: {round(cpu_avg, 2)}%  Memory: {round(mem_avg, 2)}%\")\n",
+    "    table.add_row([profile, region, min_tasks, max_tasks, desired_tasks, percentage, algorithm, \n",
+    "                   round(cpu_avg, 2), round(cpu_min, 2), round(cpu_max, 2), \n",
+    "                   round(mem_avg, 2), round(mem_min, 2), round(mem_max, 2)])\n",
     "\n",
     "print(table)"
    ]
