--- a/app-analyzers/collect-nginx-statuses.ipynb
+++ b/app-analyzers/collect-nginx-statuses.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -71,10 +71,11 @@
      "output_type": "stream",
      "text": [
       "Found 1 tasks running in acl-playground/us-west-2\n",
-      "Found 4 tasks running in acl-staging/us-west-2\n",
+      "Found 2 tasks running in acl-staging/us-west-2\n",
+      "Task arn:aws:ecs:us-west-2:649973207834:task/EcsCluster1-main/cf6504ed5494492b88f7e84b3cb852ae failed: An error occurred (InvalidParameterException) when calling the ExecuteCommand operation: The execute command failed because execute command was not enabled when the task was run or the execute command agent isn’t running. Wait and try again or run a new task with execute command enabled and try again.\n",
       "Found 3 tasks running in acl-staging/us-east-1\n",
-      "Found 38 tasks running in acl-production/us-east-1\n",
-      "Found 32 tasks running in acl-production/eu-central-1\n",
+      "Found 33 tasks running in acl-production/us-east-1\n",
+      "Found 26 tasks running in acl-production/eu-central-1\n",
       "Found 4 tasks running in acl-production/af-south-1\n",
       "Found 4 tasks running in acl-production/ca-central-1\n",
       "Found 4 tasks running in acl-production/ap-northeast-1\n",
@@ -84,17 +85,17 @@
       "+----------------+----------------+-------+--------+---------+---------+----------+---------+---------+---------+-----------+\n",
       "|    Profile     |     Region     | tasks | active | handled | accepts | requests | reading | writing | waiting | queue_avg |\n",
       "+----------------+----------------+-------+--------+---------+---------+----------+---------+---------+---------+-----------+\n",
-      "| acl-production |   us-east-1    |   38  |  194   | 1493457 | 1493457 | 2272495  |    0    |    50   |   144   |    3.1    |\n",
-      "| acl-production |  eu-central-1  |   32  |  183   | 1756870 | 1756870 | 2080612  |    0    |    38   |   145   |    3.7    |\n",
-      "| acl-production |   sa-east-1    |   6   |   30   |  388438 |  388438 |  663539  |    0    |    6    |    24   |    3.0    |\n",
-      "| acl-production | ap-southeast-2 |   6   |   8    |  347456 |  347456 |  367955  |    0    |    6    |    2    |     0     |\n",
-      "| acl-production | ap-southeast-1 |   6   |   30   |  142385 |  142385 |  335148  |    0    |    7    |    23   |    3.0    |\n",
-      "| acl-production |   af-south-1   |   4   |   11   |  232409 |  232409 |  304685  |    0    |    4    |    7    |    0.8    |\n",
-      "| acl-production |  ca-central-1  |   4   |   11   |  136399 |  136399 |  209138  |    0    |    4    |    7    |    0.8    |\n",
-      "|  acl-staging   |   us-east-1    |   3   |   25   |  31672  |  31672  |  93608   |    0    |    7    |    18   |    6.3    |\n",
-      "| acl-production | ap-northeast-1 |   4   |   4    |  27159  |  27159  |  29704   |    0    |    4    |    0    |     0     |\n",
-      "|  acl-staging   |   us-west-2    |   4   |   15   |   1032  |   1032  |   1610   |    0    |    4    |    11   |    1.8    |\n",
-      "| acl-playground |   us-west-2    |   1   |   1    |   1295  |   1295  |   1351   |    0    |    1    |    0    |     0     |\n",
+      "| acl-production |  eu-central-1  |   26  |   47   | 1389876 | 1389876 | 1672307  |    0    |    29   |    18   |     0     |\n",
+      "| acl-production |   us-east-1    |   33  |  153   |  515632 |  515632 |  886885  |    0    |    46   |   107   |    0.6    |\n",
+      "| acl-production | ap-southeast-1 |   6   |   29   |  60994  |  60994  |  132728  |    0    |    6    |    23   |    0.8    |\n",
+      "| acl-production | ap-southeast-2 |   6   |   8    |  61513  |  61513  |  65470   |    0    |    6    |    2    |     0     |\n",
+      "| acl-production |   af-south-1   |   4   |   6    |  44364  |  44364  |  62535   |    0    |    4    |    2    |     0     |\n",
+      "| acl-production |   sa-east-1    |   6   |   30   |  28995  |  28995  |  50640   |    0    |    6    |    24   |    1.0    |\n",
+      "| acl-production | ap-northeast-1 |   4   |   4    |  37470  |  37470  |  49629   |    0    |    4    |    0    |     0     |\n",
+      "| acl-production |  ca-central-1  |   4   |   21   |  19317  |  19317  |  33269   |    0    |    4    |    17   |    1.2    |\n",
+      "|  acl-staging   |   us-east-1    |   3   |   13   |   1044  |   1044  |  29081   |    0    |    3    |    10   |    0.3    |\n",
+      "|  acl-staging   |   us-west-2    |   2   |   2    |   545   |   545   |   607    |    0    |    1    |    1    |     0     |\n",
+      "| acl-playground |   us-west-2    |   1   |   1    |   447   |   447   |   449    |    0    |    1    |    0    |     0     |\n",
       "+----------------+----------------+-------+--------+---------+---------+----------+---------+---------+---------+-----------+\n"
      ]
     }
@@ -217,7 +218,7 @@
     "            except Exception as e:\n",
     "                print(f\"Task {task_arn} failed: {e}\")\n",
     "\n",
-    "    unicorn_workers = 2\n",
+    "    unicorn_workers = 4\n",
     "    handling = aggregated_stats[\"active\"] - aggregated_stats[\"instance_count\"] * unicorn_workers\n",
     "    aggregated_stats[\"queue_avg\"] = round(float(handling) / aggregated_stats[\"instance_count\"],1) if handling > 0 else 0\n",
     "    return aggregated_stats\n",
@@ -296,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -304,10 +305,10 @@
      "output_type": "stream",
      "text": [
       "Found 1 tasks running in acl-playground/us-west-2\n",
-      "Found 4 tasks running in acl-staging/us-west-2\n",
+      "Found 2 tasks running in acl-staging/us-west-2\n",
       "Found 3 tasks running in acl-staging/us-east-1\n",
-      "Found 38 tasks running in acl-production/us-east-1\n",
-      "Found 32 tasks running in acl-production/eu-central-1\n",
+      "Found 33 tasks running in acl-production/us-east-1\n",
+      "Found 26 tasks running in acl-production/eu-central-1\n",
       "Found 4 tasks running in acl-production/af-south-1\n",
       "Found 4 tasks running in acl-production/ca-central-1\n",
       "Found 4 tasks running in acl-production/ap-northeast-1\n",
@@ -320,14 +321,14 @@
       "| acl-playground |   us-west-2    | 0.5  |  3 GB  |        2        |\n",
       "|  acl-staging   |   us-west-2    | 0.5  |  3 GB  |        4        |\n",
       "|  acl-staging   |   us-east-1    | 1.0  |  5 GB  |        4        |\n",
-      "| acl-production |   us-east-1    | 1.0  |  6 GB  |        2        |\n",
+      "| acl-production |   us-east-1    | 1.0  |  6 GB  |        4        |\n",
       "| acl-production |  eu-central-1  | 2.0  |  9 GB  |        4        |\n",
-      "| acl-production |   af-south-1   | 0.5  |  4 GB  |        2        |\n",
-      "| acl-production |  ca-central-1  | 0.5  |  4 GB  |        2        |\n",
-      "| acl-production | ap-northeast-1 | 0.5  |  4 GB  |        2        |\n",
-      "| acl-production | ap-southeast-1 | 0.5  |  4 GB  |        2        |\n",
-      "| acl-production | ap-southeast-2 | 1.0  |  6 GB  |        2        |\n",
-      "| acl-production |   sa-east-1    | 0.5  |  4 GB  |        2        |\n",
+      "| acl-production |   af-south-1   | 0.5  |  4 GB  |        4        |\n",
+      "| acl-production |  ca-central-1  | 0.5  |  4 GB  |        4        |\n",
+      "| acl-production | ap-northeast-1 | 0.5  |  4 GB  |        4        |\n",
+      "| acl-production | ap-southeast-1 | 0.5  |  4 GB  |        4        |\n",
+      "| acl-production | ap-southeast-2 | 1.0  |  6 GB  |        4        |\n",
+      "| acl-production |   sa-east-1    | 0.5  |  4 GB  |        4        |\n",
       "+----------------+----------------+------+--------+-----------------+\n"
      ]
     }
